--- a/css/styles.css
+++ b/css/styles.css
@@ -644,8 +644,8 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
@@ -700,6 +700,7 @@ img {
 }
 
 .modal-title {
+  font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
