--- a/css/styles.css
+++ b/css/styles.css
@@ -597,10 +597,16 @@ img {
   background-color: rgba(47, 48, 58, 1);
 }
 
-.insert-mail {
+.insert-mail::placeholder {
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.insert-mail {
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
 }
 
 .subscribe-btn {
@@ -762,6 +768,14 @@ textarea {
   border-radius: 4px;
   font-size: 12px;
   line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+textarea::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
