--- a/css/styles.css
+++ b/css/styles.css
@@ -714,7 +714,6 @@ img {
 }
 
 .form-fields {
-  position: relative;
   display: flex;
   flex-direction: column;
 }
@@ -733,6 +732,7 @@ img {
 
 .input-column {
   padding: 0;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   padding-left: 42px;
@@ -750,6 +750,18 @@ img {
 
 .form-fields:focus-within .form-field-icon {
   fill: #2196f3;
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.form-field-icon {
+  position: absolute;
+
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 textarea:focus-within {
@@ -779,14 +791,6 @@ textarea::placeholder {
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
-}
-
-.form-field-icon {
-  position: absolute;
-
-  left: 12px;
-  bottom: 0;
-  transform: translateY(-50%);
 }
 
 .agreement-checkbox {
